--- a/SignMeUp/Base.lproj/Main.storyboard
+++ b/SignMeUp/Base.lproj/Main.storyboard
@@ -155,6 +155,9 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Learn 👋" cornerStyle="dynamic">
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="22"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <segue destination="kWf-t8-iCp" kind="show" id="ldG-gj-xFO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XDU-oH-Enf"/>
@@ -171,10 +174,10 @@
             <objects>
                 <viewController id="kWf-t8-iCp" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ILQ-4O-TOv">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f1L-y0-EYP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WhatsApp Image 2024-11-23 at 19.52.06" translatesAutoresizingMaskIntoConstraints="NO" id="f1L-y0-EYP">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -182,6 +185,7 @@
                         <viewLayoutGuide key="safeArea" id="Z5z-XU-8Mf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="yAo-Ru-nZZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ae5-sS-hFO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -475,6 +479,7 @@
         <image name="Screenshot 2024-11-23 at 7.58.37 PM" width="292" height="252"/>
         <image name="U (1)" width="128" height="128"/>
         <image name="WhatsApp Image 2024-11-23 at 17.53.00" width="1031" height="938"/>
+        <image name="WhatsApp Image 2024-11-23 at 19.52.06" width="425" height="617"/>
         <image name="book.pages.fill" catalog="system" width="107" height="128"/>
         <image name="camera.fill" catalog="system" width="128" height="93"/>
         <image name="hand.raised.palm.facing.fill" catalog="system" width="128" height="128"/>
